refacto : use first class collection